<resources>
    <string name="app_name">Device Tracker</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
    <string name="app_logo_description">Your Device, Always Found</string>
    <string name="EnterEmail">Enter your email</string>
    <string name="ResetPass">Reset Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>

